--- a/Neural Network/NeuralNetPainting.ipynb
+++ b/Neural Network/NeuralNetPainting.ipynb
@@ -1114,6 +1114,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this final part of the assignment, I'll use my own picture as a training set for the network. I'll add more layers and see how it compares. I'll then attempt to create a convolutional neural network. \n",
+    "\n",
+    "# CITATION\n",
+    "\n",
+    "[Convolutional Neural Network"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -1122,7 +1133,9 @@
     "id": "UWQzI-b22Vr5"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "im4 = Image.open()"
+   ]
   }
  ],
  "metadata": {
